DolphinView: If contextmenu is requested, abort twoClicksRenaming

When using single click to select, user can double click the file to
start renaming it. If user at the same time also opens context menu,
user can delete the file while the renaming prompt is open, which causes
weirdness.

This patch makes sure we abort the double click renaming when context
menu is requested.

BUG: 503185